fixed post/author view - spacing

--- a/web/static/css/sector.css
+++ b/web/static/css/sector.css
@@ -19,6 +19,7 @@
 }
 .ink-navigation{
 	padding-bottom: 10px;
+	padding-right: 25px;
 }
 
 #post-view {
